[gd_scene load_steps=9 format=3 uid="uid://pi60jckckj3v"]

[ext_resource type="Script" path="res://Scripts/OptionsMenu/options_menu.gd" id="1_r0bxh"]
[ext_resource type="Texture2D" uid="uid://sdt03xs17ide" path="res://Sprites/Buttons/Apply.png" id="2_jvq6g"]
[ext_resource type="Texture2D" uid="uid://byp5i0iyfm7wr" path="res://Sprites/Backrounds/opt-screen2.png" id="2_rhxql"]
[ext_resource type="Texture2D" uid="uid://dw3vru8t1y8xy" path="res://Sprites/Buttons/Apply-clicked.png" id="3_aed7o"]
[ext_resource type="Texture2D" uid="uid://4u0rnj8babcv" path="res://Sprites/Buttons/X_photo.png" id="4_ucwti"]
[ext_resource type="Script" path="res://Scripts/OptionsMenu/reset_label.gd" id="5_qwaxl"]
[ext_resource type="Script" path="res://Scripts/OptionsMenu/timer_text.gd" id="6_lyhwx"]

[sub_resource type="LabelSettings" id="LabelSettings_thw1y"]
font_size = 66

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r0bxh")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_rhxql")
expand_mode = 1

[node name="ResolutionOptions" type="OptionButton" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.604
anchor_top = 0.74
anchor_right = 0.828
anchor_bottom = 0.81
size_flags_vertical = 3

[node name="WindowOptions" type="OptionButton" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.604
anchor_top = 0.49
anchor_right = 0.829
anchor_bottom = 0.56
offset_left = 1.32007
offset_top = -0.200012
offset_right = -0.599976
offset_bottom = -0.200012
size_flags_vertical = 3

[node name="ApplyButton" type="TextureButton" parent="."]
layout_mode = 2
anchor_left = 0.24
anchor_top = 0.758
anchor_right = 0.431
anchor_bottom = 0.847
offset_left = 0.504944
offset_top = 0.23999
offset_right = -0.215088
offset_bottom = 0.119934
size_flags_vertical = 3
texture_normal = ExtResource("2_jvq6g")
texture_pressed = ExtResource("3_aed7o")
ignore_texture_size = true
stretch_mode = 0

[node name="MasterSlider" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.184
anchor_top = 0.465
anchor_right = 0.478
anchor_bottom = 0.48
offset_left = 0.719971
offset_top = 0.434967
offset_right = 0.23999
offset_bottom = 0.235962
min_value = -80.0
max_value = 0.0
rounded = true

[node name="MusicSlider" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.184
anchor_top = 0.566
anchor_right = 0.478
anchor_bottom = 0.581
offset_left = 0.719971
offset_top = 0.429993
offset_right = 0.23999
offset_bottom = 0.22998
min_value = -80.0
max_value = 0.0
rounded = true

[node name="SFXSlider" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.184
anchor_top = 0.668
anchor_right = 0.471
anchor_bottom = 0.686
offset_left = 0.719971
offset_top = -0.440063
offset_right = 0.679993
offset_bottom = -0.880066
min_value = -80.0
max_value = 0.0
rounded = true

[node name="ConfirmationPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9

[node name="RevertButton" type="Button" parent="ConfirmationPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.6
anchor_top = 0.45
anchor_right = 0.9
anchor_bottom = 0.67
offset_left = -0.151978
offset_top = -2.12003
offset_right = -0.052002
offset_bottom = -1.00006
text = "Revert"

[node name="ConfirmButton" type="Button" parent="ConfirmationPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.45
anchor_right = 0.4
anchor_bottom = 0.67
offset_left = -0.5
offset_top = -1.79999
offset_right = -0.400024
offset_bottom = -0.679993
text = "Confirm"

[node name="PanelTitle" type="Label" parent="ConfirmationPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.08
anchor_top = 0.178
anchor_right = 0.93
anchor_bottom = 0.287
offset_left = 0.119995
offset_top = 0.207993
offset_right = -0.480103
offset_bottom = 0.0319977
text = "Are you sure you want to apply changes?"
label_settings = SubResource("LabelSettings_thw1y")

[node name="ResetLabel" type="Label" parent="ConfirmationPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.75
anchor_right = 0.5
anchor_bottom = 0.8
offset_left = 0.399994
offset_right = 1.0
offset_bottom = 0.799988
script = ExtResource("5_qwaxl")

[node name="Timer" type="Timer" parent="ConfirmationPanel"]
wait_time = 10.0
one_shot = true

[node name="TimerText" type="RichTextLabel" parent="ConfirmationPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.17
anchor_top = 0.3
anchor_right = 0.84
anchor_bottom = 0.43
bbcode_enabled = true
text = "[center] [font_size={25}]Video settings reset in: [/font_size][/center]"
script = ExtResource("6_lyhwx")

[node name="XButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.942
anchor_right = 1.0
anchor_bottom = 0.096
texture_normal = ExtResource("4_ucwti")
ignore_texture_size = true
stretch_mode = 0

[connection signal="item_selected" from="ResolutionOptions" to="." method="_on_option_button_item_selected"]
[connection signal="item_selected" from="WindowOptions" to="." method="_on_window_options_item_selected"]
[connection signal="pressed" from="ApplyButton" to="." method="_on_apply_button_pressed"]
[connection signal="pressed" from="ApplyButton" to="ConfirmationPanel/TimerText" method="_on_apply_button_pressed"]
[connection signal="pressed" from="ConfirmationPanel/RevertButton" to="." method="_on_revert_button_pressed"]
[connection signal="pressed" from="ConfirmationPanel/ConfirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="timeout" from="ConfirmationPanel/Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="XButton" to="." method="_on_x_button_pressed"]
